# library-project-template

./: .gitignore  .hgignore  AUTHORS  COPYING  Makefile.am  README  README.md  bootstrap  configure.ac  init-autotools
sourcetemplates/: generate-from-template.sh
sourcetemplates/include/: template.h
sourcetemplates/src/: template.c  template.cpp
src/: Makefile.am
